# nntrainer

./: CHANGES  meson.build  meson_options.txt  pr-3630.patch  pr-3633.patch  windows-cross-arm.ini  windows-native-clang.ini  windows-native.ini
.github/models/pr-desc/: build_context.js  rules.json
.github/workflows/: ubuntu_clean_meson_build_clang.yml  windows.yml  windows_arm.yml
Applications/: meson.build
Applications/AlexNet/jni/: meson.build
Applications/CausalLM/: README.md  build_android.sh  main.cpp  meson.build
Applications/CausalLM/jni/: Android.mk
Applications/CausalLM/layers/: meson.build  rms_norm.h
Applications/CausalLM/models/: README.md  meson.build
Applications/CausalLM/models/gpt_oss/: README.md  meson.build
Applications/CausalLM/models/gpt_oss_cached_slim/: README.md  meson.build
Applications/CausalLM/models/qwen3/: README.md  meson.build
Applications/CausalLM/models/qwen3_cached_slim_moe/: README.md  meson.build
Applications/CausalLM/models/qwen3_moe/: README.md  meson.build
Applications/CausalLM/models/qwen3_slim_moe/: README.md  meson.build
Applications/Custom/LayerClient/jni/: meson.build
Applications/KNN/jni/: meson.build
Applications/LogisticRegression/jni/: meson.build
Applications/MNIST/jni/: meson.build
Applications/MixedPrecision/jni/: meson.build
Applications/Multi_inout/: Readme.md
Applications/Multi_inout/jni/: Android.mk  main.cpp  main.py  meson.build  multi_loader.cpp  multi_loader.h
Applications/Multi_input/jni/: meson.build
Applications/ONNX/jni/: meson.build
Applications/Optimizers/jni/: main.cpp
Applications/PicoGPT/jni/: meson.build
Applications/ProductRatings/jni/: meson.build
Applications/ReinforcementLearning/DeepQ/jni/: meson.build
Applications/ReinforcementLearning/Environment/CartPole/: cartpole.cpp
Applications/SimpleFC/jni/: meson.build
Applications/TFlite_export/: meson.build
Applications/TransferLearning/CIFAR_Classification/jni/: meson.build
Applications/VGG/jni/: meson.build
jni/: meson.build
nntrainer/: dictionary.c  dictionary.h  iniparser.c  iniparser.h  meson.build
nntrainer/compiler/: onnx_interpreter.cpp
nntrainer/graph/: graph_core.cpp  network_graph.cpp
nntrainer/layers/: layer_node.cpp  layer_node.h
nntrainer/layers/cl_layers/: concat_cl.cpp
nntrainer/opencl/: opencl_buffer.cpp
nntrainer/optimizers/: lion.cpp  lion.h
nntrainer/tensor/: q4_0_utils.cpp
nntrainer/tensor/cl_operations/cl_kernels/: rotary_emb.cl
nntrainer/tensor/cpu_backend/: cpu_backend.h
nntrainer/tensor/cpu_backend/arm/: arm_compute_backend.cpp  arm_compute_backend.h  arm_compute_backend_fp16.cpp  kleidiai_qsi8d32p.cpp  kleidiai_qsi8d32p_omp.cpp  kleidiai_qsi8d32p_stdthread.cpp  meson.build  neon_impl.cpp  neon_impl.h  neon_kleidiai.h
nntrainer/tensor/cpu_backend/arm/kai/: kai_common.h  matmul_clamp_f32_qsi8d32p_qsi4c32p.cpp  meson.build
nntrainer/tensor/cpu_backend/arm/kai/matmul_clamp_f32_qsi8d32p_qsi4c32p/: kai_matmul_clamp_f32_qsi8d32p1vlx4_qsi4c32p4vlx4_1vlx4vl_sme2_mopa.c  kai_matmul_clamp_f32_qsi8d32p1vlx4_qsi4c32p4vlx4_1vlx4vl_sme2_mopa.h  kai_matmul_clamp_f32_qsi8d32p1x4_qsi4c32p4vlx4_1x4vl_sme2_sdot.c  kai_matmul_clamp_f32_qsi8d32p1x4_qsi4c32p4vlx4_1x4vl_sme2_sdot.h  kai_matmul_clamp_f32_qsi8d32p1x4_qsi4c32p4x4_1x4_neon_dotprod.c  kai_matmul_clamp_f32_qsi8d32p1x4_qsi4c32p4x4_1x4_neon_dotprod.h  kai_matmul_clamp_f32_qsi8d32p1x4_qsi4c32p8x4_1x8_sve_dotprod.c  kai_matmul_clamp_f32_qsi8d32p1x4_qsi4c32p8x4_1x8_sve_dotprod.h  kai_matmul_clamp_f32_qsi8d32p1x4_qsi4c32p8x4_1x8_sve_dotprod_asm.S  kai_matmul_clamp_f32_qsi8d32p1x8_qsi4c32p4x8_1x4x32_neon_dotprod.c  kai_matmul_clamp_f32_qsi8d32p1x8_qsi4c32p4x8_1x4x32_neon_dotprod.h  kai_matmul_clamp_f32_qsi8d32p1x8_qsi4c32p8x8_1x8_sve_dotprod.c  kai_matmul_clamp_f32_qsi8d32p1x8_qsi4c32p8x8_1x8_sve_dotprod.h  kai_matmul_clamp_f32_qsi8d32p1x8_qsi4c32p8x8_1x8_sve_dotprod_asm.S  kai_matmul_clamp_f32_qsi8d32p4x4_qsi4c32p4x4_16x4_neon_dotprod.c  kai_matmul_clamp_f32_qsi8d32p4x4_qsi4c32p4x4_16x4_neon_dotprod.h  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p4x8_16x4_neon_i8mm.c  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p4x8_16x4_neon_i8mm.h  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p4x8_8x4x32_neon_i8mm.c  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p4x8_8x4x32_neon_i8mm.h  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p8x8_16x8_sve_i8mm.c  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p8x8_16x8_sve_i8mm.h  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p8x8_16x8_sve_i8mm_asm.S  kai_matmul_clamp_f32_qsi8d32p_qsi4c32p_interface.h  meson.build
nntrainer/tensor/cpu_backend/arm/kai/pack/: meson.build
nntrainer/tensor/cpu_backend/ggml_interface/nntr_ggml_impl/: meson.build  nntr_ggml_impl.cpp  nntr_ggml_impl_avx.cpp  nntr_ggml_impl_fallback.cpp  nntr_ggml_impl_neon.cpp  nntr_ggml_impl_sve.cpp  nntr_ggml_impl_utils.h
test/jni/: Android.mk
test/unittest/: meson.build  unittest_blas_kernels_cl.cpp  unittest_nntrainer_cpu_backend.cpp  unittest_nntrainer_cpu_backend_fp16.cpp  unittest_nntrainer_graph.cpp
test/unittest/layers/: layers_dependent_common_tests.cpp  meson.build  unittest_layers_channel_shuffle.cpp  unittest_layers_convolution2d_transpose.cpp  unittest_layers_embedding_direct.cpp  unittest_layers_gather.cpp  unittest_layers_gru_direct.cpp  unittest_layers_grucell_direct.cpp  unittest_layers_layer_normalization_direct.cpp  unittest_layers_lstm_direct.cpp  unittest_layers_lstmcell_direct.cpp  unittest_layers_multi_head_attention_direct.cpp  unittest_layers_permute_direct.cpp  unittest_layers_reduce_mean_direct.cpp  unittest_layers_reduce_sum_direct.cpp  unittest_layers_rnn_direct.cpp  unittest_layers_rnncell_direct.cpp  unittest_layers_slice.cpp  unittest_layers_split_direct.cpp  unittest_layers_tensor.cpp  unittest_layers_time_dist.cpp  unittest_layers_upsample2d_direct.cpp  unittest_layers_zoneout_lstmcell_direct.cpp
test/unittest/models/: unittest_models.cpp
tools/: android_test.sh  package_android.sh
tools/cross/: android_armv7l.json  android_armv8-2-a.json  android_armv9-2-a.json
tools/pyutils/: build_windows_resources.py  generate_def.py
(+13 files in other folders)
